--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -1,10 +1,10 @@
 version: 1
 packages:
   - name: "db"
-    path: "./db/sqlc"
+    path: "./db/sqlc/"
     engine: "mysql"
     schema: "./db/migration"
-    queries: "./db/query"
+    queries: "./db/query/"
     emit_json_tags: true
     emit_prepared_queries: false
     emit_interface: false
